fix: stop overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
   display: table;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 p {
